# naylang

./: .gitignore  .travis.yml  CMakeLists.txt  Gemfile  LICENSE  README.md  temp.diff
interpreter/: CMakeLists.txt
interpreter/include/: incl.h
interpreter/src/: main.cpp
interpreter/src/core/control/: DebugState.h  Debugger.cpp  Debugger.h  Interpreter.cpp  Interpreter.h  REPLInterpreter.cpp  REPLInterpreter.h
interpreter/src/core/model/ast/: ASTNodeDefinitions.h  ASTTreeDefinition.h  GraceAST.cpp  GraceAST.h  NodeFactory.h  Statement.h
interpreter/src/core/model/evaluators/: ASTPrintEvaluator.cpp  ASTPrintEvaluator.h  BindingEvaluator.cpp  BindingEvaluator.h  DebugEvaluator.cpp  DebugEvaluator.h  DebuggerEvaluator.cpp  DebuggerEvaluator.h  Evaluator.h  ExecutionEvaluator.cpp  ExecutionEvaluator.h  NextLineFinder.cpp  NextLineFinder.h
interpreter/src/core/model/execution/: Definitions.h
interpreter/src/core/parser/: NaylangParserStack.h  NaylangParserVisitor.cpp  NaylangParserVisitor.h
interpreter/src/definitions/: Expression.h  Literal.h  Operations.h  Statement.h
interpreter/src/frontends/: ConsoleFrontend.cpp  ConsoleFrontend.h  FrontendCommand.cpp  FrontendCommand.h
interpreter/src/frontends/modes/: ConsoleExecutionMode.cpp  ConsoleExecutionMode.h
interpreter/src/frontends/modes/debug/: DebugCommand.cpp  (+3 more)
interpreter/src/implementations/: Environment.h
interpreter/src/implementations/expressions/: ExpArithmetic.h  ExpBoolean.h  ExpConditional.h  ExpLiteral.h
interpreter/src/implementations/operations/: ArithmeticOperation.h  ComparisonOperation.h  OpSum.h
interpreter/src/implementations/statements/: AssignmentStatement.h  ConditionalStatement.h
interpreter/src/model/: Environment.h  Evaluable.h  Evaluator.h  Expression.h  Pointers.h  Visitor.h
interpreter/src/model/ast/: ASTNodeDefinitions.h  NodeFactory.h  Statement.h
interpreter/src/model/environment/: Environment.cpp  Environment.h  GraceObject.cpp  GraceObject.h  GraceObjectFactory.cpp  GraceObjectFactory.h  Identifier.cpp  Identifier.h  Value.h
interpreter/src/model/evaluators/: ASTPrintEvaluator.cpp  ASTPrintEvaluator.h  BindingEvaluator.cpp  BindingEvaluator.h  Evaluator.h  ExecutionEvaluator.cpp  ExecutionEvaluator.h  GraceEvaluator.cpp  GraceEvaluator.h
interpreter/src/model/execution/: Method.h  MethodRequest.h
interpreter/src/model/expressions/: Assignment.cpp  Assignment.h  Constant.cpp  Constant.h  Expression.h  ExpressionBlock.cpp  ExpressionBlock.h  IfThenElse.cpp  IfThenElse.h  Number.cpp  Number.h  VariableDeclaration.h  VariableReference.cpp  VariableReference.h
interpreter/src/model/reporters/: ConsoleReporter.cpp  ConsoleReporter.h  Reporter.h
interpreter/src/model/statements/: Assignment.cpp  Assignment.h  Constant.h  IfThenElse.h  Statement.h  VariableDeclaration.cpp  VariableDeclaration.h
interpreter/src/model/visitors/: ConstantVisitor.cpp  ConstantVisitor.h  NumberVisitor.cpp  NumberVisitor.h
interpreter/src/parser/: CMakeLists.txt  NaylangParserVisitor.cpp  NaylangParserVisitor.h  generate.sh
tests/: CMakeLists.txt
tests/include/: catch.h
tests/src/: ArithmeticOperation_test.cpp  ComparisonOperation_test.cpp  ConditionalStatement.cpp  Environment_test.cpp  ExpArithmetic_test.cpp  ExpBoolean.cpp  ExpBoolean_test.cpp  ExpConditional_test.cpp  Include_test.cpp  Integration_test.cpp  Literal_test.cpp  OpSum.cpp  tests.cpp
tests/src/core/parser/: NaylangParserVisitor_test.cpp
tests/src/model/: Environment_test.cpp
tests/src/model/environment/: Environment_test.cpp  GraceObject_test.cpp  Identifier_test.cpp  Value_test.cpp
tests/src/model/evaluators/: BindingEvaluator_test.cpp  ExecutionEvaluator_test.cpp  GraceEvaluator_test.cpp
tests/src/model/execution/: MethodRequest_test.cpp  Method_test.cpp
tests/src/model/expressions/: Assignment_test.cpp  Constant_test.cpp  ExpressionBlock_test.cpp  IfThenElse_test.cpp  Number_test.cpp  VariableDeclaration_test.cpp  VariableReference_test.cpp
tests/src/model/statements/: Assignment_test.cpp  Constant_test.cpp  ParameterList_test.cpp  VariableDeclaration_test.cpp
tests/src/model/visitors/: NumberVisitor_test.cpp
tests/src/parser/: NaylangParserVisitor_test.cpp  Parser_test.cpp
(+284 files in other folders)
